Fix header and body spacing. Add missing JS vendor files.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,7 @@ body {
   margin: 0;
 }
 .navbar-right {
+  max-width: 100%;
   text-align: center;
 }
 @media (min-width: 768px) {
@@ -61,6 +62,7 @@ body {
 
 .app-content {
   padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .nav-tabs {
